✨ add context7 widget script to the footer of the master template

--- a/.docfx/templates/savvyio/layout/_master.tmpl
+++ b/.docfx/templates/savvyio/layout/_master.tmpl
@@ -134,6 +134,8 @@
         </div>
       </div>
     </footer>
+
+    <script async src="https://context7.com/widget.js" data-library="/codebeltnet/savvyio"></script>
   </body>
   {{/redirect_url}}
 </html>
